--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.12.0",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
