--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
+    "@mui/x-data-grid": "^7.1.0",
     "antd": "^5.15.4",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
