--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/x-data-grid": "^7.1.0",
     "antd": "^5.15.4",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
     "khalti-checkout-web": "^2.2.0",
     "marquee": "^0.2.1",
